# control-rs

./: .gitignore  Cargo.toml  README.md  build.rs  clippy.toml  rustfmt.toml
.github/workflows/: CI.yaml  CI.yml
codegen/: Cargo.toml
codegen/src/: lib.rs
control-rs-codegen/: Cargo.toml
control-rs-codegen/src/: lib.rs
documentation/: doc-standards.md
src/: lib.rs
src/classical_tools/: mod.rs
src/integrators/: mod.rs
src/math/: assert.rs  mod.rs  num_traits.rs  num_types.rs  ops.rs  static_storage.rs  subprograms.rs
src/math/tests/: mod.rs  num_tests.rs  op_tests.rs  subprogram_tests.rs
src/modern_tools/: mod.rs
src/nonlinear_tools/: mod.rs
src/polynomial/: mod.rs
src/robust_tools/: mod.rs
src/state_space/: mod.rs
src/transfer_function/: mod.rs
