[package]
name = "control-rs"
version = "0.0.0"
edition = "2024"
description = "A control systems library for autonomous systems."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Dyse-Industries/control-rs.git"
categories = ["embedded", "science", "no-std"]
keywords = ["control", "robotics", "firmware", "autonomy"]

[dependencies]
libm = "0.2.16"


[features]
std = []

[dev-dependencies]


[profile.release]
# Enable Link Time Optimization (LTO)
lto = "fat" # or true for a simpler LTO, "fat" is more aggressive
# Set the optimization level to 3 (highest for speed)
opt-level = 3
# Set the number of code generation units to 1 for maximum inter-procedural optimization
codegen-units = 1
# Disable debug assertions
debug-assertions = false
